feat: 添加逻辑回归训练器

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,5 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "sentence-transformers>=4.1.0",
     "torch>=2.7.0",
+    "typing-extensions>=4.13.2",
 ]
