--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "jupyter>=1.1.1",
     "numpy>=2.2.5",
     "python-dotenv>=1.1.0",
     "sentence-transformers>=4.1.0",
