--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "ltc-longtextclassifier"
+name = "lotc"
 version = "0.1.0"
-description = "Add your description here"
+description = "Easy-2-use long text classifier trainers."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
