--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "lotc"
-version = "0.1.0"
+version = "0.1.1"
 description = "Easy-2-use long text classifier trainers."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -10,5 +10,6 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "sentence-transformers>=4.1.0",
     "torch>=2.7.0",
+    "transformers>=4.51.3",
     "typing-extensions>=4.13.2",
 ]
