update: deeplot 改名为 deeplotx

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "deeplot"
+name = "deeplotx"
 version = "0.2.17"
 description = "Easy-2-use long text classifier trainers."
 readme = "README.md"
