update: 新增 hf-xet 依赖

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Easy-2-use long text classifier trainers."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "huggingface-hub[hf-xet]>=0.30.2",
+    "hf-xet>=1.0.5",
     "jupyter>=1.1.1",
     "numpy>=2.2.5",
     "python-dotenv>=1.1.0",
