--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "deeplotx"
-version = "0.4.1"
-description = "Easy-2-use long text classifier trainers."
+version = "0.4.2"
+description = "Easy-2-use long text NLP toolkit."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
