--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 [project]
 name = "deeplotx"
-version = "0.4.3"
+version = "0.4.5"
 description = "Easy-2-use long text NLP toolkit."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "hf-xet>=1.0.5",
-    "jupyter>=1.1.1",
-    "numpy>=2.2.5",
+    "jupyter",
+    "numpy",
     "python-dotenv>=1.1.0",
-    "torch>=2.7.0",
-    "transformers>=4.51.3",
+    "torch",
+    "transformers",
     "typing-extensions>=4.13.2",
 ]
