fix: 修复权重无法加载的bug

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "deeplotx"
-version = "0.4.8"
+version = "0.4.9"
 description = "Easy-2-use long text NLP toolkit."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -8,6 +8,7 @@ dependencies = [
     "hf-xet>=1.0.5",
     "jupyter",
     "numpy",
+    "protobuf>=6.31.1",
     "python-dotenv>=1.1.0",
     "torch",
     "transformers",
