--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "deeplotx"
-version = "0.5.3"
+version = "0.5.5"
 description = "Easy-2-use long text NLP toolkit."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -13,4 +13,5 @@ dependencies = [
     "torch",
     "transformers",
     "typing-extensions>=4.13.2",
+    "vortezwohl>=0.0.6",
 ]
