--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "numpy",
     "protobuf",
     "python-dotenv",
+    "tiktoken",
     "torch",
     "transformers",
     "typing-extensions",
