feat: 添加 sentencepiece 依赖

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "numpy",
     "protobuf",
     "python-dotenv",
+    "sentencepiece",
     "tiktoken",
     "torch",
     "transformers",
