--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "deeplotx"
-version = "0.9.0"
-description = "Easy-2-use long text NLP toolkit."
+version = "0.9.1"
+description = "An out-of-the-box long-text NLP framework."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -16,5 +16,5 @@ dependencies = [
     "transformers",
     "typing-extensions",
     "vortezwohl>=0.0.8",
-    "name2gender>=0.0.4a0",
+    "name4py>=0.1.4",
 ]
